# meta-environment

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEMO_SCRIPT.md  DESIGN.md  Dockerfile  IMPROVEMENTS.md  PERFORMANCE.md  PRODUCTION_READY.md  README.md  RESULTS.md  SUBMISSION.md  __init__.py  baseline_memory.json  client.py  colab_training.ipynb  data.py  demo.py  evolution_history.json  final_strategy.json  generate_report.py  hf_blog_post.md  improved_memory.json  improvement_loop.py  inference.py  inference_enhanced.py  main.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  scenario_data.py  test_production_grade.py  validate_submission.py
api/: __init__.py  app.py  experiments.py  metrics.py  middleware.py  pipeline_app.py  tracing.py  ui_template.html
benchmarks/: load_test.py  test_performance.py  update_baseline.py
core/: async_execution.py  benchmarking.py  config.py  exceptions.py  logging_config.py  visualization.py
data/: SCENARIO_MANIFEST.md  __init__.py  generated_scenarios.py  merge_scenarios.py  scenario_repository.py
docs/: API_REFERENCE.md  ARCHITECTURE.md  CHANGELOG.md  EXPERIMENTATION.md  FAQ.md  KUBERNETES_DEPLOYMENT.md  RELEASE_CHECKLIST.md  SECURITY.md  SECURITY_AUDIT.md  TROUBLESHOOTING.md
environment/: __init__.py  gym_wrapper.py  workplace_environment.py
examples/: 01_quickstart.py  02_custom_agent.py  03_training_ppo.py  04_evaluation.py  05_scenario_creation.py  run_training.sh  train_ppo.py
graders/: __init__.py  grader.py
grafana/: dashboard.json
meta_environment/: inference.py  models.py  pyproject.toml  requirements.txt
openenv_workplace_env.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
prometheus/: alerts.yml
results/: demo_run.txt
scripts/: rollback.sh
security/: audit_logging.py  rate_limit_strict.py
server/: Dockerfile  __init__.py  app.py  workplace_env_environment.py
tests/: conftest.py  test_api.py  test_docker_healthcheck.py  test_escalation_metadata.py  (+9 more)
(+82 files in other folders)
