# Copyright (c) Meta Platforms, Inc. and affiliates.
# All rights reserved.
#
# This source code is licensed under the BSD-style license found in the
# LICENSE file in the root directory of this source tree.

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-workplace_env"
version = "0.1.0"
description = "Workplace Env environment for OpenEnv"
requires-python = ">=3.10"
dependencies = [
    # Core OpenEnv runtime (provides FastAPI server + HTTP client types)
    # install from github
    # "openenv-core[core] @ git+https://github.com/meta-pytorch/OpenEnv.git",
    "openenv-core[core]>=0.2.2",
    # Environment-specific dependencies
    # Add all dependencies needed for your environment here
    # Examples:
    # "numpy>=1.19.0",
    # "torch>=2.0.0",
    # "gymnasium>=0.29.0",
    # "openspiel>=1.0.0",
    # "smolagents>=1.22.0,<2",
    "typer>=0.12.0",
    "openai>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
# Server entry point - enables running via: uv run --project . server
# or: python -m workplace_env.server.app
server = "workplace_env.server.app:main"
pipeline-api = "workplace_env.api.pipeline_app:main"
workplace-cli = "workplace_env.main:main"
run-inference = "workplace_env.main:run_inference_entry"
run-grader = "workplace_env.main:run_grader_entry"
run-pipeline = "workplace_env.main:run_pipeline_entry"

[tool.setuptools]
include-package-data = true
packages = [
    "workplace_env",
    "workplace_env.server",
    "workplace_env.api",
    "workplace_env.core",
    "workplace_env.core.models",
    "workplace_env.core.graders",
    "workplace_env.core.inference",
    "workplace_env.environment",
    "workplace_env.data",
    "workplace_env.tests",
]
package-dir = { "workplace_env" = ".", "workplace_env.server" = "server" }